--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -3,7 +3,7 @@
     font-style: normal;
     font-display: swap;
     font-weight: 400;
-    src: url('./fonts/Lato-Regular.woff2') format('woff2');
+    src: url('../fonts/Lato-Regular.woff2') format('woff2');
   }
 
   @font-face {
@@ -11,7 +11,7 @@
     font-style: normal;
     font-display: swap;
     font-weight: 600;
-    src: url('./fonts/Lato-Semibold.woff2') format('woff2');
+    src: url('../fonts/Lato-Semibold.woff2') format('woff2');
   }
 
   @font-face {
@@ -19,7 +19,7 @@
     font-style: normal;
     font-display: swap;
     font-weight: 700;
-    src: url('./fonts/Lato-Bold.woff2') format('woff2');
+    src: url('../fonts/Lato-Bold.woff2') format('woff2');
   }
 
   @font-face {
@@ -27,7 +27,7 @@
     font-style: normal;
     font-display: swap;
     font-weight: 900;
-    src: url('./fonts/Lato-Heavy.woff2') format('woff2');
+    src: url('../fonts/Lato-Heavy.woff2') format('woff2');
   }
 
   @font-face {
@@ -35,5 +35,5 @@
     font-style: normal;
     font-display: swap;
     font-weight: 800;
-    src: url('./fonts/Raleway-ExtraBold.woff2') format('woff2');
+    src: url('../fonts/Raleway-ExtraBold.woff2') format('woff2');
   }
