--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -27,11 +27,9 @@
     @media #{$tablet} {
       margin-bottom: 25px;
       padding-right: 20px;
-      width: max-content;
-      text-align: left;
     }
 
-    @media #{$tablet-lg} {
+    @media #{$desktop} {
       margin-bottom: 0;
       padding-right: 0;
       width: max-content;
@@ -46,7 +44,6 @@
 
     @media #{$tablet} {
       margin-bottom: 25px;
-      width: auto;
     }
 
     @media #{$tablet-lg} {
