--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -19,6 +19,7 @@
   &__copyright {
     margin-bottom: 40px;
     width: 100%;
+    max-width: 600px;
 
     font-size: 13px;
     color: $text-color-inverse;
@@ -29,10 +30,14 @@
       padding-right: 20px;
     }
 
+    @media #{$tablet-lg} {
+      max-width: 800px;
+    }
+
     @media #{$desktop} {
       margin-bottom: 0;
       padding-right: 0;
-      width: max-content;
+      max-width: 305px;
       text-align: left;
     }
   }
