--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -45,11 +45,18 @@
 
   &__descr {
     margin-bottom: 11px;
+    max-width: 85%;
+
     font-size: 16px;
     font-weight: 700;
 
     @media #{$tablet} {
+      max-width: 70%;
       font-size: 20px;
+    }
+
+    @media #{$tablet-lg} {
+      max-width: 50%;
     }
   }
 
