--- a/scss/blocks/_range-slider.scss
+++ b/scss/blocks/_range-slider.scss
@@ -8,11 +8,10 @@
   }
 
   &__descr {
-    max-width: 180px;
+    max-width: 75%;
     text-align: left;
 
     @media #{$tablet} {
-      max-width: unset;
       font-size: 18px;
     }
   }
