--- a/scss/blocks/_steps.scss
+++ b/scss/blocks/_steps.scss
@@ -54,6 +54,10 @@
 
   &__item-text {
     margin-bottom: $after-mob-offset;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 300px;
+
     font-size: 20px;
 
     @media #{$desktop} {
